fix how-it-works header spacing feel, window-pane screens should be width: 100%, padding-bottom on why companies love us should be 0

--- a/less/components/page-section.less
+++ b/less/components/page-section.less
@@ -23,7 +23,7 @@
 }
 
 .page-section .section-header {
-  margin-bottom: 36px;
+  margin-bottom: 56px;
   font-size: 3.2em;
   line-height: 1.2em;
 
