--- a/less/components/window-pane.less
+++ b/less/components/window-pane.less
@@ -53,6 +53,10 @@
   }
 }
 
+.window-pane img {
+  width: 100%;
+}
+
 .window-pane .window-nav {
   display: inline-block;
   float: right;
