--- a/less/overrides-landing.less
+++ b/less/overrides-landing.less
@@ -25,7 +25,19 @@
   }
 }
 
+#section-how-it-works {
+  .section-header {
+    // The 3 graphics do not have a well-defined border so the
+    // spacing between the header and the 'how-it-works' graphics
+    // looks greater than all other sections
+    // This balances that feeling out
+    margin-bottom: 36px;
+  }
+}
+
 #section-why-companies-love-us {
+  padding-bottom: 0;
+
   .screenshot-window {
     #grid > .column(8);
   }
